restore course topics table

--- a/index.qmd
+++ b/index.qmd
@@ -70,28 +70,28 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 
 ## Course Topics
 
-+-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
-| **Week \#** | **Dates**  | **Lecture**                                                                                                 | **Reading**              |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
-| 1           | 1/7, 1/9   | [Introduction](https://ucsb.box.com/s/maqfl2rorjjbekb23ek98b3odshuvcq2)                                     | ISL Ch. 1, 2.1           |
-|             |            |                                                                                                             |                          |
-|             |            | [Linear Regression and ML Modeling Fundamentals I](https://ucsb.box.com/s/3krktrjmagi8sbo3mwg2t4rc57qtu100) |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
-| 2           | 1/14, 1/16 | [Regularized Regression and ML Modeling Fundamentals](https://ucsb.box.com/s/rbdkrkiue88ggqeutgua1xzeh44lj5aw) II                                                      | ISL Ch. 5.1.1-5.1.4, 6.2 |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
-| 3           | 1/21, 1/23 | [Logistic Regression, Classification](https://ucsb.box.com/s/i5ymtx2fv1cn2tonnt7ibt03gop19vey)                                                                         |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
-| 4           | 1/28, 1/30 | K-nearest neighbors, Decision Trees                                                                         |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
-| 5           | 2/3, 2/6   | Random Forest                                                                                               |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
-| 6           | 2/11, 2/13 | Gradient Boosting                                                                                           |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
-| 7           | 2/18, 2/20 | Clustering                                                                                                  |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
-| 8           | 2/25, 2/27 | Support Vector Machines                                                                                     |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
-| 9           | 3/4, 3/6   | Deep Learning                                                                                               |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
-| 10          | 3/11, 3/13 | Kaggle                                                                                                      |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------+--------------------------+
++-------------+------------+--------------------------------------------------------------------------------------------------------------------+--------------------------+
+| **Week \#** | **Dates**  | **Lecture**                                                                                                        | **Reading**              |
++-------------+------------+--------------------------------------------------------------------------------------------------------------------+--------------------------+
+| 1           | 1/7, 1/9   | [Introduction](https://ucsb.box.com/s/maqfl2rorjjbekb23ek98b3odshuvcq2)                                            | ISL Ch. 1, 2.1           |
+|             |            |                                                                                                                    |                          |
+|             |            | [Linear Regression and ML Modeling Fundamentals I](https://ucsb.box.com/s/3krktrjmagi8sbo3mwg2t4rc57qtu100)        |                          |
++-------------+------------+--------------------------------------------------------------------------------------------------------------------+--------------------------+
+| 2           | 1/14, 1/16 | [Regularized Regression and ML Modeling Fundamentals II](https://ucsb.box.com/s/rbdkrkiue88ggqeutgua1xzeh44lj5aw)  | ISL Ch. 5.1.1-5.1.4, 6.2 |
++-------------+------------+--------------------------------------------------------------------------------------------------------------------+--------------------------+
+| 3           | 1/21, 1/23 | [Logistic Regression, Classification](https://ucsb.box.com/s/i5ymtx2fv1cn2tonnt7ibt03gop19vey)                     | ISL Ch. 4.1-4.4          |
++-------------+------------+--------------------------------------------------------------------------------------------------------------------+--------------------------+
+| 4           | 1/28, 1/30 | K-nearest neighbors, Decision Trees                                                                                |                          |
++-------------+------------+--------------------------------------------------------------------------------------------------------------------+--------------------------+
+| 5           | 2/3, 2/6   | Random Forest                                                                                                      |                          |
++-------------+------------+--------------------------------------------------------------------------------------------------------------------+--------------------------+
+| 6           | 2/11, 2/13 | Gradient Boosting                                                                                                  |                          |
++-------------+------------+--------------------------------------------------------------------------------------------------------------------+--------------------------+
+| 7           | 2/18, 2/20 | Clustering                                                                                                         |                          |
++-------------+------------+--------------------------------------------------------------------------------------------------------------------+--------------------------+
+| 8           | 2/25, 2/27 | Support Vector Machines                                                                                            |                          |
++-------------+------------+--------------------------------------------------------------------------------------------------------------------+--------------------------+
+| 9           | 3/4, 3/6   | Deep Learning                                                                                                      |                          |
++-------------+------------+--------------------------------------------------------------------------------------------------------------------+--------------------------+
+| 10          | 3/11, 3/13 | Kaggle                                                                                                             |                          |
++-------------+------------+--------------------------------------------------------------------------------------------------------------------+--------------------------+
