--- a/index.qmd
+++ b/index.qmd
@@ -68,7 +68,7 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 
 -   [Intro to Statistical Learning with Python](https://www.statlearning.com/) (ISL)
 
-## Course Topics - Test
+## Course Topics
 
 +-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
 | **Week \#** | **Dates**  | **Lecture**                                                                                                       | **Reading**              |
@@ -81,7 +81,7 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 +-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
 | 3           | 1/21, 1/23 | [Logistic Regression, Classification](https://ucsb.box.com/s/i5ymtx2fv1cn2tonnt7ibt03gop19vey)                    | ISL Ch. 4.1-4.4          |
 +-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
-| 4           | 1/28, 1/30 | K-nearest neighbors, Decision Trees                                                                               |                          |
+| 4           | 1/28, 1/30 | K-nearest neighbors, Decision Trees                                                                               | ISL Ch. 2.2.3, 8.1       |
 +-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
 | 5           | 2/3, 2/6   | Random Forest                                                                                                     |                          |
 +-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
