--- a/index.qmd
+++ b/index.qmd
@@ -18,7 +18,9 @@ jupyter:
     name: eds232_env
 ---
 
-![Image created using the Midjourney image generation tool](img/MLRobotLearnBanner.png)
+![Image created using the Midjourney image generation tool]
+
+  [Image created using the Midjourney image generation tool]: img/MLRobotLearnBanner.png
 
 ## Course Description
 
@@ -36,7 +38,9 @@ Machine learning is a field of inquiry devoted to understanding and building met
 
 ## Important Links
 
--   [Link to full course syllabus](https://docs.google.com/document/d/12VFjVN8E9cN_CHXs2mXIuIHqk6DSQklKjcRyKQnVDgE/edit?usp=sharing)
+-   [Link to full course syllabus]
+
+  [Link to full course syllabus]: https://docs.google.com/document/d/12VFjVN8E9cN_CHXs2mXIuIHqk6DSQklKjcRyKQnVDgE/edit?usp=sharing
 
 ## Weekly Course Schedule
 
@@ -62,36 +66,46 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 
 ### Computing
 
--   [Minimum MEDS device requirements](https://ucsb-meds.github.io/computer_reqs.html)
+-   [Minimum MEDS device requirements]
+
+  [Minimum MEDS device requirements]: https://ucsb-meds.github.io/computer_reqs.html
 
 ### Textbook
 
--   [Intro to Statistical Learning with Python](https://www.statlearning.com/) (ISL)
+-   [Intro to Statistical Learning with Python] (ISL)
+
+  [Intro to Statistical Learning with Python]: https://www.statlearning.com/
 
 ## Course Topics
 
-+-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
-| **Week \#** | **Dates**  | **Lecture**                                                                                                       | **Reading**              |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
-| 1           | 1/7, 1/9   | [Introduction](https://ucsb.box.com/s/maqfl2rorjjbekb23ek98b3odshuvcq2)                                           | ISL Ch. 1, 2.1           |
-|             |            |                                                                                                                   |                          |
-|             |            | [Linear Regression and ML Modeling Fundamentals I](https://ucsb.box.com/s/3krktrjmagi8sbo3mwg2t4rc57qtu100)       |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
-| 2           | 1/14, 1/16 | [Regularized Regression and ML Modeling Fundamentals II](https://ucsb.box.com/s/rbdkrkiue88ggqeutgua1xzeh44lj5aw) | ISL Ch. 5.1.1-5.1.4, 6.2 |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
-| 3           | 1/21, 1/23 | [Logistic Regression, Classification](https://ucsb.box.com/s/i5ymtx2fv1cn2tonnt7ibt03gop19vey)                    | ISL Ch. 4.1-4.4          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
-| 4           | 1/28, 1/30 | K-nearest neighbors, Decision Trees                                                                               | ISL Ch. 2.2.3, 8.1       |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
-| 5           | 2/3, 2/6   | Random Forest                                                                                                     |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
-| 6           | 2/11, 2/13 | Gradient Boosting                                                                                                 |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
-| 7           | 2/18, 2/20 | Clustering                                                                                                        |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
-| 8           | 2/25, 2/27 | Support Vector Machines                                                                                           |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
-| 9           | 3/4, 3/6   | Deep Learning                                                                                                     |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
-| 10          | 3/11, 3/13 | Kaggle                                                                                                            |                          |
-+-------------+------------+-------------------------------------------------------------------------------------------------------------------+--------------------------+
++-------------+------------+----------------------------------------------------------+--------------------------+
+| **Week \#** | **Dates**  | **Lecture**                                              | **Reading**              |
++-------------+------------+----------------------------------------------------------+--------------------------+
+| 1           | 1/7, 1/9   | [Introduction]                                           | ISL Ch. 1, 2.1           |
+|             |            |                                                          |                          |
+|             |            | [Linear Regression and ML Modeling Fundamentals I]       |                          |
++-------------+------------+----------------------------------------------------------+--------------------------+
+| 2           | 1/14, 1/16 | [Regularized Regression and ML Modeling Fundamentals II] | ISL Ch. 5.1.1-5.1.4, 6.2 |
++-------------+------------+----------------------------------------------------------+--------------------------+
+| 3           | 1/21, 1/23 | [Logistic Regression, Classification]                    | ISL Ch. 4.1-4.4          |
++-------------+------------+----------------------------------------------------------+--------------------------+
+| 4           | 1/28, 1/30 | [K-nearest neighbors, Decision Trees]                    | ISL Ch. 2.2.3, 8.1       |
++-------------+------------+----------------------------------------------------------+--------------------------+
+| 5           | 2/3, 2/6   | Random Forest                                            |                          |
++-------------+------------+----------------------------------------------------------+--------------------------+
+| 6           | 2/11, 2/13 | Gradient Boosting                                        |                          |
++-------------+------------+----------------------------------------------------------+--------------------------+
+| 7           | 2/18, 2/20 | Clustering                                               |                          |
++-------------+------------+----------------------------------------------------------+--------------------------+
+| 8           | 2/25, 2/27 | Support Vector Machines                                  |                          |
++-------------+------------+----------------------------------------------------------+--------------------------+
+| 9           | 3/4, 3/6   | Deep Learning                                            |                          |
++-------------+------------+----------------------------------------------------------+--------------------------+
+| 10          | 3/11, 3/13 | Kaggle                                                   |                          |
++-------------+------------+----------------------------------------------------------+--------------------------+
+
+  [Introduction]: https://ucsb.box.com/s/maqfl2rorjjbekb23ek98b3odshuvcq2
+  [Linear Regression and ML Modeling Fundamentals I]: https://ucsb.box.com/s/3krktrjmagi8sbo3mwg2t4rc57qtu100
+  [Regularized Regression and ML Modeling Fundamentals II]: https://ucsb.box.com/s/rbdkrkiue88ggqeutgua1xzeh44lj5aw
+  [Logistic Regression, Classification]: https://ucsb.box.com/s/i5ymtx2fv1cn2tonnt7ibt03gop19vey
+  [K-nearest neighbors, Decision Trees]: https://ucsb.box.com/s/vr9dc4t9llrultj6sgmxceb5yxi84n29
