--- a/index.qmd
+++ b/index.qmd
@@ -91,7 +91,7 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 +-------------+------------+----------------------------------------------------------+--------------------------+
 | 4           | 1/28, 1/30 | [K-nearest neighbors, Decision Trees]                    | ISL Ch. 2.2.3, 8.1       |
 +-------------+------------+----------------------------------------------------------+--------------------------+
-| 5           | 2/3, 2/6   | Random Forest                                            |                          |
+| 5           | 2/3, 2/6   | Bagging, Random Forest                                   | ISL Ch. 8.2.1, 8.2.2     |
 +-------------+------------+----------------------------------------------------------+--------------------------+
 | 6           | 2/11, 2/13 | Gradient Boosting                                        |                          |
 +-------------+------------+----------------------------------------------------------+--------------------------+
