--- a/index.qmd
+++ b/index.qmd
@@ -91,7 +91,7 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 +-------------+------------+----------------------------------------------------------+--------------------------+
 | 4           | 1/28, 1/30 | [K-nearest neighbors, Decision Trees]                    | ISL Ch. 2.2.3, 8.1       |
 +-------------+------------+----------------------------------------------------------+--------------------------+
-| 5           | 2/3, 2/6   | Bagging, Random Forest                                   | ISL Ch. 8.2.1, 8.2.2     |
+| 5           | 2/3, 2/6   | [Bagging, Random Forest]                                 | ISL Ch. 8.2.1, 8.2.2     |
 +-------------+------------+----------------------------------------------------------+--------------------------+
 | 6           | 2/11, 2/13 | Gradient Boosting                                        |                          |
 +-------------+------------+----------------------------------------------------------+--------------------------+
@@ -109,3 +109,4 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
   [Regularized Regression and ML Modeling Fundamentals II]: https://ucsb.box.com/s/rbdkrkiue88ggqeutgua1xzeh44lj5aw
   [Logistic Regression, Classification]: https://ucsb.box.com/s/i5ymtx2fv1cn2tonnt7ibt03gop19vey
   [K-nearest neighbors, Decision Trees]: https://ucsb.box.com/s/vr9dc4t9llrultj6sgmxceb5yxi84n29
+  [Bagging, Random Forest]: https://ucsb.box.com/s/9zti9j0qb53ontnyi80pzmpupcwq5am5
