updated lecture schedule

--- a/index.qmd
+++ b/index.qmd
@@ -93,13 +93,13 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 +-------------+------------+----------------------------------------------------------+--------------------------+
 | 5           | 2/3, 2/6   | [Bagging, Random Forest]                                 | ISL Ch. 8.2.1, 8.2.2     |
 +-------------+------------+----------------------------------------------------------+--------------------------+
-| 6           | 2/11, 2/13 | Gradient Boosting                                        |                          |
+| 6           | 2/11, 2/13 | Guest Lecture                                            |                          |
 +-------------+------------+----------------------------------------------------------+--------------------------+
-| 7           | 2/18, 2/20 | Clustering                                               |                          |
+| 7           | 2/18, 2/20 | Gradient Boosting                                        |                          |
 +-------------+------------+----------------------------------------------------------+--------------------------+
-| 8           | 2/25, 2/27 | Support Vector Machines                                  |                          |
+| 8           | 2/25, 2/27 | Clustering                                               |                          |
 +-------------+------------+----------------------------------------------------------+--------------------------+
-| 9           | 3/4, 3/6   | Deep Learning                                            |                          |
+| 9           | 3/4, 3/6   | SVM                                                      |                          |
 +-------------+------------+----------------------------------------------------------+--------------------------+
 | 10          | 3/11, 3/13 | Kaggle                                                   |                          |
 +-------------+------------+----------------------------------------------------------+--------------------------+
