Changed header size on week 6 discussion

--- a/discussion/week3.qmd
+++ b/discussion/week3.qmd
@@ -10,9 +10,9 @@ jupyter:
       format_version: '1.0'
       jupytext_version: 1.16.4
   kernelspec:
-    display_name: Python 3 (ipykernel)
+    display_name: EDS 232 Environment
     language: python
-    name: python3
+    name: eds232_env
 ---
 
 ### Introduction
@@ -163,7 +163,6 @@ def plot_roc_curve(y_test, y_pred_prob):
     plt.legend()
     plt.grid(True)
     plt.show()
-    
 ```
 
 ### Function 5
