--- a/discussion/week6.qmd
+++ b/discussion/week6.qmd
@@ -38,7 +38,7 @@ from sklearn.metrics import mean_squared_error, accuracy_score
 from ucimlrepo import fetch_ucirepo 
 ```
 
-### Load Data
+#### Load Data
 
 ```{python}
 # Fetch dataset 
