--- a/index.qmd
+++ b/index.qmd
@@ -95,7 +95,7 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 +-------------+------------+----------------------------------------------------------+--------------------------+
 | 6           | 2/11, 2/13 | Guest Lecture                                            |                          |
 +-------------+------------+----------------------------------------------------------+--------------------------+
-| 7           | 2/18, 2/20 | Gradient Boosting                                        |                          |
+| 7           | 2/18, 2/20 | [Gradient Boosting]                                      |                          |
 +-------------+------------+----------------------------------------------------------+--------------------------+
 | 8           | 2/25, 2/27 | Clustering                                               |                          |
 +-------------+------------+----------------------------------------------------------+--------------------------+
@@ -110,3 +110,4 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
   [Logistic Regression, Classification]: https://ucsb.box.com/s/i5ymtx2fv1cn2tonnt7ibt03gop19vey
   [K-nearest neighbors, Decision Trees]: https://ucsb.box.com/s/vr9dc4t9llrultj6sgmxceb5yxi84n29
   [Bagging, Random Forest]: https://ucsb.box.com/s/9zti9j0qb53ontnyi80pzmpupcwq5am5
+  [Gradient Boosting]: https://ucsb.box.com/s/29xmz1fl3vac53wlqako2v2cbry3mk7s
