--- a/index.qmd
+++ b/index.qmd
@@ -95,7 +95,7 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 +-------------+------------+----------------------------------------------------------+--------------------------+
 | 6           | 2/11, 2/13 | Guest Lecture                                            |                          |
 +-------------+------------+----------------------------------------------------------+--------------------------+
-| 7           | 2/18, 2/20 | [Gradient Boosting]                                      |                          |
+| 7           | 2/18, 2/20 | [Gradient Boosting]                                      | 8.2.3, 8.2.5, 10.7.2     |
 +-------------+------------+----------------------------------------------------------+--------------------------+
 | 8           | 2/25, 2/27 | Clustering                                               |                          |
 +-------------+------------+----------------------------------------------------------+--------------------------+
