--- a/discussion/week4.qmd
+++ b/discussion/week4.qmd
@@ -10,9 +10,9 @@ jupyter:
       format_version: '1.0'
       jupytext_version: 1.16.4
   kernelspec:
-    display_name: EDS 232 Environment
+    display_name: EDS 232
     language: python
-    name: eds232_env
+    name: eds232-env
 ---
 
 ### Introduction
@@ -157,7 +157,6 @@ for depth in max_depths:
     accuracies.append(accuracy)
     
     print(f"Max Depth: {depth} - Accuracy: {accuracy:.3f}")
-
 ```
 
 #### Visualize Models
