--- a/discussion/week7.qmd
+++ b/discussion/week7.qmd
@@ -54,10 +54,10 @@ Work with a partner and annotate what each line in the code chunk below is doing
 def preprocess(text):
     text = text.lower() 
     text=  text.strip()  
-    text=  re.sub('<.*?>','', text) 
+    text=  re.sub(r'<.*?>','', text) 
     text = re.sub(r'[^\w\s]','',text)  
     text = re.sub(r'\[[0-9]*\]',' ',text) 
     text = re.sub(r'\d',' ',text)  
-    text = re.sub('\s+', ' ', text) 
+    text = re.sub(r'\s+', ' ', text) 
     return text
 ```
