--- a/index.qmd
+++ b/index.qmd
@@ -97,7 +97,7 @@ The goal of EDS 232 is to equip students with a strong foundation in the core co
 +-------------+------------+----------------------------------------------------------+--------------------------+
 | 7           | 2/18, 2/20 | [Gradient Boosting]                                      | 8.2.3, 8.2.5, 10.7.2     |
 +-------------+------------+----------------------------------------------------------+--------------------------+
-| 8           | 2/25, 2/27 | Clustering                                               |                          |
+| 8           | 2/25, 2/27 | Clustering                                               | 12.4                     |
 +-------------+------------+----------------------------------------------------------+--------------------------+
 | 9           | 3/4, 3/6   | SVM                                                      |                          |
 +-------------+------------+----------------------------------------------------------+--------------------------+
