--- a/discussion/week2.qmd
+++ b/discussion/week2.qmd
@@ -12,7 +12,7 @@ jupyter:
   kernelspec:
     display_name: EDS 232
     language: python
-    name: eds232-env
+    name: eds232_env
 ---
 
 ## Introduction
