+week9 slides, fixed env name error on index

--- a/index.qmd
+++ b/index.qmd
@@ -15,7 +15,7 @@ jupyter:
   kernelspec:
     display_name: EDS 232
     language: python
-    name: eds232-env
+    name: eds232_env
 ---
 
 ![Image created using the Midjourney image generation tool]
